webapp_pipeline/app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vproapp-svc
  labels:
    name: vproapp-svc
spec:
    selector:
      app: vproapp
    ports:
    - name: vproapp-svc-port
      protocol: TCP
      port: 80
      targetPort: 80
    type: ClusterIP
