webapp_pipeline/app/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vproapp-ingress
  labels:
    name: vproapp-ingress
  annotations:
     nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: vproapp-svc
             port:
               number: 80
